--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,8 +1,8 @@
-home = C:\manh\Extension\python37
+home = E:\Utility_Applications\python\Python37
 implementation = CPython
 version_info = 3.7.9.final.0
 virtualenv = 20.21.0
 include-system-site-packages = false
-base-prefix = C:\manh\Extension\python37
-base-exec-prefix = C:\manh\Extension\python37
-base-executable = C:\manh\Extension\python37\python.exe
+base-prefix = E:\Utility_Applications\python\Python37
+base-exec-prefix = E:\Utility_Applications\python\Python37
+base-executable = E:\Utility_Applications\python\Python37\python.exe
